--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     <meta name="author" content="Aachol Foundation">
+    <meta property="og:image" content="https://scontent.fdac116-1.fna.fbcdn.net/v/t1.6435-9/126176218_3728607013857251_4469197031484947192_n.png?_nc_cat=108&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=6Eymwv8BaW8AX96-hHm&_nc_ht=scontent.fdac116-1.fna&oh=08ac7f7118110b3b734f899ebb4427a6&oe=6183E535">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta property="og:image:alt" content="Aachol Foundation">
+    <meta property="og:title" content="Aachol Foundation">
+    <meta property="og:type" content="website">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
 </head>
